# code-standards-auditor

./: .coveragerc  .env.example  .gitignore  .mcp.json  ANALYSIS_SUMMARY.txt  API_FIRST_MCP_IMPLEMENTATION.md  API_KEY_SECURITY.md  ARCHITECTURE_V3.md  BACKLOG.md  CLAUDE.md  CODE_QUALITY_ANALYSIS.md  COMMIT_MESSAGE.md  CRITICAL_ISSUES_STATUS.md  DEEP_RESEARCH_MODE_IMPLEMENTATION.md  DEVELOPMENT_STATE.md  DEVELOPMENT_STATUS.md  ISSUE_8_RESOLUTION.md  LICENSE  MCP_SERVER_ARCHITECTURE_ANALYSIS.md  MCP_TESTING_RESULTS.md  PHASE1_PROGRESS.md  PHASE2_PROGRESS.md  QUALITY_ANALYSIS_INDEX.md  README.md  SECURITY_AUDIT_REPORT_20251116.md  SECURITY_INCIDENT_2025-11-15.md  SESSION_SUMMARY_20250906.md  SESSION_SUMMARY_20250906_CLEANUP.md  SESSION_SUMMARY_20251104.md  SESSION_SUMMARY_20251116.md  STANDARDS_IMPORT_SUMMARY.md  STANDARDS_SYNC_GUIDE.md  TEST_SUITE_STATUS.md  V4_ROADMAP.md  bandit_report.txt  cleanup_github_scripts.py  cleanup_github_scripts.sh  create_neo4j_database.sh  git_commit_mcp_testing.sh  git_commit_push.sh  (+37 more)
.githooks/: pre-commit
api/: __init__.py  main.py
api/middleware/: __init__.py  auth.py  logging.py  rate_limit.py
api/routers/: agent_optimized.py  audit.py  metrics.py  standards.py  workflow.py
api/schemas/: __init__.py  admin.py  audit.py  common.py  standards.py
cli/: __init__.py  enhanced_cli.py  standards_cli.py
cli/interactive/: conversational_research.py
config/: __init__.py  settings.py
core/: __init__.py
core/audit/: __init__.py  analyzer.py  context.py  engine.py  rule_engine.py
core/llm/: __init__.py  batch_processor.py  cache_decorator.py  prompt_manager.py  provider.py
docker/: Dockerfile  docker-compose.yml
docs/: ARCHITECTURE.md  AUTO_REFRESH_DESIGN.md  SECURITY_BEST_PRACTICES.md
github-scripts/: commit_mcp_implementation.sh  git_commit_push.sh  prepare_commit.sh
github-scripts/archive/: commit_all_fixes_20250904.sh  commit_cache_fix_20250904.sh  commit_comprehensive_fix_20250904.sh  commit_mcp_debugging_suite.sh  commit_mcp_fixes.sh  commit_mcp_naming_fix.sh  commit_mcp_validation_fix.sh  commit_monitoring_fix.sh  commit_python_path_fix.sh  commit_workflow_fixes.sh  deploy_complete_fix.sh  deploy_complete_workflow.sh  deploy_fix.sh  make_commit_executable.py  prepare_commit_v2.0.6.sh  session_commit_20250905.sh
mcp/: README.md  mcp_config.json  server.py  test_server.py
mcp_server/: __init__.py  mcp_config.json  server.py  server_api_client.py  server_basic.py  server_fixed.py  server_simple.py
mcp_server/archive/: server_hardcoded.py  server_original.py
mcp_server/archive/server_impl/: server_backup_20250905.py  server_clean.py  server_fixed.py  setup.sh
mcp_server/server_impl/: __init__.py  requirements_mcp.txt  server.py  test_server.py
scripts/: cleanup_duplicates.py  import_standards.py  import_standards_enhanced.py  sync_standards.py
scripts/archive/: import_standards_original_backup.py
services/: __init__.py  cache_service.py  enhanced_recommendations_service.py  gemini_service.py  integrated_workflow_service.py  neo4j_service.py  recommendations_service.py  standards_access_service.py  standards_research_service.py  standards_sync_service.py
tests/: conftest.py
tests/integration/: test_api_client.py  test_api_client_simple.py
tests/unit/: test_audit_context.py  test_code_analyzer.py
tests/unit/services/: test_standards_access_service.py
utils/: __init__.py  cache_manager.py  service_factory.py
